[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/fps.gd" type="Script" id=1]
[ext_resource path="res://gui/inGameUI.gd" type="Script" id=2]
[ext_resource path="res://gui/mainMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/BitPotion/bitPotionExtTitle.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0858765, 0.103317, 0.109375, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="main_gui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="debug" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -800.0
margin_bottom = 14.0
align = 2

[node name="info_container" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.10803
margin_bottom = 1.10803

[node name="VBoxContainer" type="VBoxContainer" parent="info_container"]
margin_right = 800.0
margin_bottom = 600.0

[node name="fps" type="Label" parent="info_container/VBoxContainer"]
margin_right = 800.0
margin_bottom = 22.0
script = ExtResource( 1 )

[node name="inGameUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="questPanel" type="Panel" parent="inGameUI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 180, 0 )
custom_styles/panel = SubResource( 1 )

[node name="questList" type="RichTextLabel" parent="inGameUI/questPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
rect_clip_content = false
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[b]Quests[/b]"
text = "Quests"

[node name="playerInfo" type="Label" parent="inGameUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -34.0
margin_right = 120.0
margin_bottom = -20.0
text = "HP: 100/100"
valign = 2

[node name="gunInfo" type="VBoxContainer" parent="inGameUI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -60.0
margin_right = -20.0
margin_bottom = -20.0
alignment = 2

[node name="gunName" type="Label" parent="inGameUI/gunInfo"]
margin_right = 47.0
margin_bottom = 22.0
text = "Pistol"
align = 2

[node name="gunAmmo" type="Label" parent="inGameUI/gunInfo"]
margin_top = 26.0
margin_right = 47.0
margin_bottom = 48.0
text = "10/500"
align = 2

[node name="mainMenu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="mainMenu"]
margin_left = 344.0
margin_top = 224.0
margin_right = 456.0
margin_bottom = 376.0

[node name="VBoxContainer" type="VBoxContainer" parent="mainMenu/HBoxContainer"]
margin_right = 112.0
margin_bottom = 152.0

[node name="gameTitle" type="Label" parent="mainMenu/HBoxContainer/VBoxContainer"]
margin_right = 112.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "he1st"
align = 1

[node name="mainMenuButtons" type="VBoxContainer" parent="mainMenu/HBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 112.0
margin_bottom = 152.0

[node name="startGameBtn" type="Button" parent="mainMenu/HBoxContainer/VBoxContainer/mainMenuButtons"]
margin_right = 112.0
margin_bottom = 28.0
text = "Start"

[node name="settingsBtn" type="Button" parent="mainMenu/HBoxContainer/VBoxContainer/mainMenuButtons"]
margin_top = 32.0
margin_right = 112.0
margin_bottom = 60.0
text = "Settings"

[node name="exitGameBtn" type="Button" parent="mainMenu/HBoxContainer/VBoxContainer/mainMenuButtons"]
margin_top = 64.0
margin_right = 112.0
margin_bottom = 92.0
text = "Exit"
